--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 {
   "name": "予約アプリ",
   "short_name": "予約",
-  "start_url": "index.html",
+  "start_url": "/index.html?utm_source=web_app_manifest",
   "display": "standalone",
   "background_color": "#ffffff",
-  "theme_color": "#ffaaaa",
+  "theme_color": "#ff8888",
   "icons": [
     {
       "src": "icon-192.png",
