--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,7 @@
   "theme_color": "#ff8888",
   "icons": [
     {
-      "src": "icon-192.png",
+      "src": "stuppy192.png",
       "sizes": "192x192",
       "type": "image/png"
     }
