--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "予約アプリ",
   "short_name": "予約",
-  "start_url": "/index.html?utm_source=web_app_manifest",
+  "start_url": "/reservation-pwa/index.html?utm_source=web_app_manifest",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#ff8888",
